# open-research-agent

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Dockerfile  README.md  compose.yaml  pyproject.toml
apps/api/: main.py
apps/cli/: main.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md  MVP_SCOPE.md  PRD.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_V0_1.md  TASKLIST.md  TESTING.md
src/: __init__.py
src/agents/: analyst.py  planner.py  reporter.py  researcher.py
src/analysis/: report_builder.py  table_analysis.py  text_analysis.py
src/core/: bootstrap.py  config.py  exceptions.py  logging.py
src/data/: datasets.py  models.py  schemas.py  storage.py
src/llm/: router.py
src/search/: provider.py  queries.py  ranker.py
src/web/: cleaners.py  crawler.py  extractor.py  fetch_browser.py  fetch_http.py
src/workflows/: artifact_manifest.py  run_research.py
tests/: conftest.py  test_analysis.py  test_api.py  test_bootstrap.py  test_browser_fallback.py  test_cli.py  test_config.py  test_crawler.py  test_crawler_fallback.py  test_extractor.py  test_fetch_browser.py  test_fetch_http.py  test_imports.py  test_packaging.py  test_report_builder.py  test_reporter_agent.py  test_search_queries.py  test_search_ranking.py  test_storage_artifacts.py  test_workflow.py
tests/fixtures/: js_heavy_sparse.html  noisy_page.html  simple_static.html  sparse_page.html
tests/fixtures/html/: js_heavy_minimal.html  minimal_page.html  noisy_page.html  simple_article.html
