[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[project]
name = "open-research-agent"
version = "0.1.0"
description = "Python-first scaffold for a bounded open research workflow."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Open Research Agent Contributors" }]
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "typer>=0.12.0",
  "rich>=13.7.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "pydantic-ai>=0.0.14",
  "litellm>=1.43.0",
  "httpx>=0.27.0",
  "playwright>=1.46.0",
  "crawl4ai>=0.3.74",
  "trafilatura>=1.12.0",
  "selectolax>=0.3.21",
  "polars>=1.4.1",
  "pandas>=2.2.2",
  "duckdb>=1.0.0",
  "pyarrow>=17.0.0",
  "python-dotenv>=1.0.1",
  "tavily-python>=0.3.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.7",
  "pytest>=8.3.2",
  "pytest-asyncio>=0.23.8",
  "mypy>=1.11.1",
]

[project.scripts]
ora = "apps.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["apps", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
